pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-app
  labels:
    app: sample-app
spec:
  containers:
    - name: sample-app
      image: sample-app:v1
      ports:
        - containerPort: 80
      resources:
        requests:
          cpu: 100m
          memory: 50Mi
        limits:
          cpu: 200m
          memory: 100Mi
